<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="top">

    <TextView
        android:id="@+id/light_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/light_text"/>
    <EditText
        android:id="@+id/light_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/light_hint"
        android:importantForAutofill="no"
        android:inputType="number"/>

    <TextView
        android:id="@+id/temperature_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temperature_text"/>
    <EditText
        android:id="@+id/temperature_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/temperature_hint"
        android:importantForAutofill="no"
        android:inputType="number"/>

    <TextView
        android:id="@+id/gps_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gps_text"/>
    <LinearLayout
        android:id="@+id/gps_values"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="top">
        <EditText
            android:id="@+id/latitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/latitude_hint"
            android:importantForAutofill="no"
            android:inputType="number"/>
        <EditText
            android:id="@+id/longitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/longitude_hint"
            android:importantForAutofill="no"
            android:inputType="number"/>
        <Button
            android:id="@+id/gps_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gps_button"/>
    </LinearLayout>

    <TextView
        android:id="@+id/accelerate_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accelerometer_text"/>
    <LinearLayout
        android:id="@+id/accelerometer_values"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="top">
        <EditText
            android:id="@+id/x"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/x_hint"
            android:importantForAutofill="no"
            android:inputType="number" />
        <EditText
            android:id="@+id/y"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/y_hint"
            android:importantForAutofill="no"
            android:inputType="number"/>
        <EditText
            android:id="@+id/z"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/z_hint"
            android:importantForAutofill="no"
            android:inputType="number"/>
    </LinearLayout>
</LinearLayout>